# groupchat-podcast

./: .env.example  .gitignore  APPLICATION-SPEC.md  CURRENT-PROGRESS.md  LICENSE  README.md  docs.md  pyproject.toml
src/groupchat_podcast/: __init__.py  cli.py  contacts.py  docs.md  imessage.py  podcast.py  preflight.py  tts.py
tests/: conftest.py  test_cli.py  test_contacts.py  test_imessage.py  test_podcast.py  test_preflight.py  test_tts.py
